# pacman

./: .clang-format  .gitignore  .gitlab-ci.yml  .markdownlint.json  BUILDING.md  CMakeLists.txt  Makefile  README.md  TODO.txt  copy.md
.github/workflows/: build-test.yml  cmake-multi-platform.yml  release.yml
apple_cmake/: MacBundle.cmake  README.md
cmake/: MacBundle.cmake  README.md
res/: macos_icon.icns  win-icon.rc
res/maps/: default.map  multi-player.map  single-player.map
src/: ResourcePath.cpp  ResourcePath.hpp  ResourcePath.mm  main.cpp
src/pacman/: config.hpp
src/pacman/Config/: config.cpp  config.hpp
src/pacman/Game/: game.cpp  game.hpp
src/pacman/GameTile/: __barrel__.hpp  game_tile.cpp  game_tile.hpp
src/pacman/GameTile/Edible/: __barrel__.hpp  edible.cpp  edible.hpp
src/pacman/GameTile/Edible/Food/: food.cpp  food.hpp
src/pacman/GameTile/Edible/Fruit/: fruit.cpp  fruit.hpp
src/pacman/GameTile/Edible/PowerPellet/: power_pellet.cpp  power_pellet.hpp
src/pacman/GameTile/Movable/: __barrel__.hpp  movable.cpp  movable.hpp
src/pacman/GameTile/Movable/Ghost/: ghost.cpp  ghost.hpp
src/pacman/GameTile/Movable/Ghost/Blinky/: blinky.hpp
src/pacman/GameTile/Movable/Ghost/Clyde/: clyde.hpp
src/pacman/GameTile/Movable/Ghost/Inky/: inky.hpp
src/pacman/GameTile/Movable/Ghost/Pinky/: pinky.hpp
src/pacman/GameTile/Movable/Pacman/: pacman.cpp  pacman.hpp
src/pacman/GameTile/Wall/: wall.cpp  wall.hpp
src/pacman/MainMenu/: main_menu.cpp  main_menu.hpp
src/pacman/MainMenu/MenuAnimation/: menu_animation.cpp  menu_animation.hpp
src/pacman/MainMenu/MenuEntry/: menu_entry.cpp  menu_entry.hpp
src/pacman/MainMenu/MenuTitle/: menu_title.cpp  menu_title.hpp
src/pacman/PerfLogger/: performance_logger.cpp  performance_logger.hpp
src/pacman/RNG/: rng.cpp  rng.hpp
src/pacman/WindowTitle/: window_title.cpp  window_title.hpp
